--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -82,7 +82,7 @@
                 .avatar {
                     width: 38px;
                     height: 38px;
-                    background-image: url(../../assets/images/userAvatar.jpg);
+                    background-image: url(../../assets/images/userAvatar.webp);
                     background-size: cover;
                     background-position: center;
                     background-repeat: no-repeat;
