--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -238,7 +238,7 @@
             appearance: none;
             -webkit-appearance: none;
             -moz-appearance: none;
-            background-image: url(../assets/images/selectIcon.png);
+            background-image: url(../assets/images/selectIcon.webp);
             background-repeat: no-repeat;
             background-position: right center;
             background-size: 8px;
